Fixed error with image locations.

--- a/src/template.html
+++ b/src/template.html
@@ -122,7 +122,7 @@
               <div class="project-wrapper__image">
                 <a href="http://www.fairdinkumsheds.com.au/designer" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="fdsapp.jpg" />
+                    <img class="img-fluid" src="./assets/fdsapp.jpg" />
                   </div>
                 </a>
               </div>
@@ -149,7 +149,7 @@
               <div class="project-wrapper__image">
                 <a href="http://www.shedboss.com.au/app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="sbapp.gif" />
+                    <img class="img-fluid" src="./assets/sbapp.gif" />
                   </div>
                 </a>
               </div>
