Updated colours to be more green. Updated links of react images.

--- a/src/template.html
+++ b/src/template.html
@@ -178,7 +178,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://smart-brain-bs.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/smartbrain.png" />
                   </div>
@@ -210,7 +210,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://blakesullivan.github.io/robofriends/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/robofriends.png" />
                   </div>
